force-app/main/default/objects/Stripe_Settings__c/fields/Default_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Default_Card_Number__c</fullName>
    <label>Default Card Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>