force-app/main/default/objects/Stripe_Settings__c/fields/Delayed_Webhook_Processor_ID__c.field-meta.xml
<CustomField>
    <fullName>Delayed_Webhook_Processor_ID__c</fullName>
    <label>Delayed Webhook Processor ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>