force-app/main/default/objects/Stripe_Settings__c/fields/Is_Live_Environment__c.field-meta.xml
<CustomField>
    <fullName>Is_Live_Environment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Live Environment</label>
    <type>Checkbox</type>
</CustomField>