force-app/main/default/objects/Stripe_Settings__c/fields/Stripe_Secret_Live_Key__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Secret_Live_Key__c</fullName>
    <label>Stripe Secret Live Key</label>
    <length>40</length>
    <type>Text</type>
</CustomField>